Update formatting to owner_id

--- a/src/views/vwPlaylist/playlist.ejs
+++ b/src/views/vwPlaylist/playlist.ejs
@@ -26,7 +26,7 @@
         </div>
         <p class="playlist-title"><%= playlist.playlist_name %></p>
         <p class="playlist-creator">
-          Created by: <%= playlist.creator_name %>
+          Created by: <%= playlist.owner_id %><!-- Co the xai query lay cai ten cua user ve dc k? -->
         </p>
       </div>
     <% }); %>
