Add css link for the likeBtn

--- a/src/views/partials/likeBtn.ejs
+++ b/src/views/partials/likeBtn.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/likeBtn.css">
 <button class="like-btn <%= liked ? 'liked' : '' %>" data-type="<%= type %>" data-id="<%= id %>">
     <i class="bi <%= liked ? 'bi-heart-fill' : 'bi-heart' %>"></i>
 </button>
