--- a/src/views/layouts/container.ejs
+++ b/src/views/layouts/container.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="/css/likeBtn.css">
 </head>
 <body>
     <div id="container">
