using popup in container

--- a/src/views/layouts/container.ejs
+++ b/src/views/layouts/container.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/likeBtn.css">
 </head>
 <body>
+    <div id="overlay" style="display: none;"></div>
+    <%- include("../partials/playlistPopup") %>
     <div id="container">
         <div id="left-container">
             <%- include('../partials/sidebar') %>
