btn to add track to playlist

--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -9,6 +9,9 @@
         <button class="like-btn" data-type="track" data-id="">
             <i class="bi"></i>
         </button>
+        <button class="add-to-playlists-btn">
+            <i class="bi bi-plus"></i>
+        </button>
     </div>
     <div class="player-controls">
         <div class="player-control-btn">
