use interact-btn class to apply styling

--- a/src/views/partials/addBtn.ejs
+++ b/src/views/partials/addBtn.ejs
@@ -1,3 +1,3 @@
-<button class="add-to-playlists-btn" data-id="<%= id %>" onclick="openPlaylistPopup('<%= id %>')">
+<button class="add-to-playlists-btn interact-btn" data-id="<%= id %>" onclick="openPlaylistPopup('<%= id %>')">
     <i class="bi bi-plus"></i>
 </button>
