--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -6,10 +6,10 @@
             <span class="player-track-title"><a href="">Track Title</a></span>
             <span class="player-track-artist">Track Artist</span>
         </div>
-        <button class="like-btn" data-type="track" data-id="">
+        <button class="like-btn interact-btn" data-type="track" data-id="">
             <i class="bi"></i>
         </button>
-        <button class="add-to-playlists-btn">
+        <button class="add-to-playlists-btn interact-btn">
             <i class="bi bi-plus"></i>
         </button>
     </div>
