update default album img path

--- a/src/views/partials/player.ejs
+++ b/src/views/partials/player.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/player.css">
 <div class="footer-player">
     <div id="player-song-info">
-        <img class="player-album-img" src="/images/albums/default_album.jpg" alt="Album Cover">
+        <img class="player-album-img" src="/images/albums/album_default.png" alt="Album Cover">
         <div class="player-song-details">
             <span class="player-track-title"><a href="">Track Title</a></span>
             <span class="player-track-artist">Track Artist</span>
