using real profile pic

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
     </div>
     <div class="dropdown navbar-right">
         <button class="dropbtn" onclick="dropdown()">
-            <img src="/images/profile-pic.jpg" alt="avatar" id="avatar">
+            <img src="<%= user.user_profile_pic %>" alt="avatar" id="avatar">
             <span class="username"><%= username %></span>
         </button>
         <div class="dropdown-content" id="dropdown-profile">
