update style so that it show all the edit pic btn

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -18,8 +18,8 @@ main {
 	position: relative;
 	width: 100px;
 	height: 100px;
-	border-radius: 50%;
 	overflow: hidden;
+	padding: 5px;
 }
 
 .profile-pic {
