display user_id

--- a/src/views/vwProfile/my_profile.ejs
+++ b/src/views/vwProfile/my_profile.ejs
@@ -10,7 +10,7 @@
         </div>
         <div class="profile-info">
             <h1 class="user-name">
-                <%= user.user_name %>
+                <%= user.user_name %> #<%= user.user_id %>
             </h1>
         </div>
     </div>
