--- a/src/public/css/player.css
+++ b/src/public/css/player.css
@@ -68,7 +68,7 @@
 }
 
 .player-controls {
-	width: 40%;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
 }
@@ -133,4 +133,12 @@
 
 .manip-btn.active {
 	color: green;
+}
+
+.interact {
+	display: flex;
+	flex-direction: row;
+	width: 25%;
+	align-items: center;
+	gap: 20px;
 }
