--- a/src/views/layouts/container.ejs
+++ b/src/views/layouts/container.ejs
@@ -7,6 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/images/icon.png">
     <link rel="stylesheet" href="/css/container.css">
+    <link rel="stylesheet" href="/css/homepage.css">
+    <link rel="stylesheet" href="/css/album_detail.css">
+    <link rel="stylesheet" href="/css/artist_detail.css">
+    <link rel="stylesheet" href="/scs/playlist.css">
+    <link rel="stylesheet" href="/css/create-playlist.css">
+    <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="/css/track_detail.css">
+    <link rel="stylesheet" href="/css/tracks.css">
+    <link rel="stylesheet" href="/css/upload.css">
     <link rel="stylesheet" href="/css/interactBtn.css">
 </head>
 <body>
