--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -1,4 +1,4 @@
-<main>
+<main class="search">
   <link rel="stylesheet" href="/css/search.css">
   <h1>Hello, looking for some thing?</h1>
   <div class="search-container">
